<resources>
    <string name="app_name">Converter</string>
    <string name="button">bm</string>
    <string name="todo" />
    <string name="mile" />
    <string name="km" />
    <string name="kms">KM</string>
    <string name="kmo">KM</string>
    <string name="mile1">Mile</string>
    <string name="kg">KG</string>
    <string name="Miles">MILES</string>
    <string name="to_mile">TO MILE</string>
    <string name="to_km">To km</string>
    <string name="todod">TODO</string>
    <string name="enter_the_number">Enter the number</string>
    <string name="convert">Convert</string>
    <string name="inout_1">inout_1</string>
    <string name="inout_2">inout_2</string>
    <string name="display">display</string>
    <string name="enter_the_power">Enter the power</string>
    <string name="enter_the_base_number">Enter the base number</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="mul">*</string>
    <string name="power">^</string>
    <string name="minus">-</string>
    <string name="div">/</string>
    <string name="eql">=</string>
    <string name="answers">Answers</string>
</resources>
