<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303333"
   >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="416dp"
        android:layout_height="403dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-3dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="238dp"
            android:contentDescription="@string/todod"
            android:paddingTop="12dp"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/basenumber1"
            android:layout_width="410dp"
            android:layout_height="76dp"
            android:autofillHints=""
            android:background="#E74C3C"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingTop="12dp"
            android:paddingBottom="10dp"
            android:text="@string/enter_the_number"
            android:textColor="#FAF6F6"
            tools:ignore="LabelFor" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="14dp" />


        <TextView
            android:id="@+id/result"
            android:layout_width="410dp"
            android:layout_height="72dp"
            android:background="#E74C3C"
            android:ems="10"
            android:padding="10dp"
            android:paddingTop="12dp"
            android:text="@string/convert"
            android:textColor="#F6F6F6"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/km"
        android:layout_width="170dp"
        android:layout_height="68dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="428dp"
        android:background="#E74C3C"
        android:text="@string/to_km"
        android:textColor="#FDFCFC"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <Button
        android:id="@+id/mile"
        android:layout_width="170dp"
        android:layout_height="68dp"
        android:layout_marginTop="428dp"
        android:background="#E74C3C"
        android:text="@string/to_mile"
        android:textColor="#FDF9F9"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toEndOf="@+id/km"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>